--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.html
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.html
@@ -1,10 +1,9 @@
-<div class="container-box"
-      mat-dialog-title
+<div class="container-box">
+
+  <h1 mat-dialog-title
       cdkDrag
       cdkDragRootElement=".cdk-overlay-pane"
       cdkDragHandle>
-
-  <h1 mat-dialog-title>
     {{mainTitleString}}
   </h1>
 
@@ -16,3 +15,14 @@
     </button>
   </div>
 </div>
+
+<!-- <div class="example-box" cdkDrag>
+  I can only be dragged using the handle
+
+  <div class="example-handle" cdkDragHandle>
+    <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+      <path d="M0 0h24v24H0z" fill="none"></path>
+    </svg>
+  </div>
+</div> -->
