--- a/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
+++ b/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
@@ -3,17 +3,22 @@
   <div>
     <!-- SINGLE SYMBOL -->
     <div *ngIf="this.symbolData.classificationType.toUpperCase() == 'SINGLESYMBOL'">
+      <!-- TODO: jpkeahey - Debug Line, delete later -->
+      {{printGeometryType()}}
       <!-- LINE -->
-      <div *ngIf="this.geometryType.includes('LineString')">
+      <div *ngIf="this.geometryType.toUpperCase().includes('LINESTRING')">
         <svg class="layer-icon" height="10" width="25">
           <line x1="5" y1="5" x2="25" y2="5" [ngStyle]="styleObject()" style="stroke-width:2"/>
         </svg>
       </div>
       <!-- USER-PROVIDED DEFAULT MARKER -->
-      <div *ngIf="this.symbolData.properties.symbolImage" id="user-symbol"></div>
+      <div  *ngIf="this.symbolData.properties.symbolImage">
+        <img [attr.src]="this.mapService.getAppPath() + this.symbolData.properties.symbolImage">
+      </div>
       <!-- BUILT-IN DEFAULT MARKER -->
       <div *ngIf="this.symbolData.properties.builtinSymbolImage">
-        <img class="layer-icon" src="assets/app-default/img/default-marker.png" height="15">
+        <img  class="layer-icon"
+              [attr.src]="this.mapService.getAppPath() + this.symbolData.properties.builtinSymbolImage">
       </div>
       <div *ngIf="this.symbolData.properties.symbolShape; else defaultLegend">
         <!-- SQUARE -->
@@ -62,7 +67,7 @@
       <ng-template #defaultLegend>
         <div *ngIf="this.symbolData.properties.symbolImage === undefined &&
         this.symbolData.properties.builtinSymbolImage === undefined &&
-        !this.geometryType.includes('LineString')">
+        !this.geometryType.toUpperCase().includes('LINESTRING')">
           <svg width="18" height="18">
             <rect width="17" height="17" [ngStyle]="styleObject()"/>
           </svg>
