--- a/info-mapper/src/app/map-components/map-layer-control/map-layer.component.html
+++ b/info-mapper/src/app/map-components/map-layer-control/map-layer.component.html
@@ -26,7 +26,7 @@
     <label title="Show/hide '{{layerViewData.name}}' layer on the map" class="switch">
 
       <input id="{{layerViewData.geoLayerId}}-slider" type="checkbox"
-              (click)="toggleLayer()" checked="checked">
+              (click)="toggleLayer()" [attr.checked]="selectedInitial()">
       <span class="slider round"></span>
       </label>
     </td>
